--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,15 +2,14 @@ name: Gatsby Publish
 
 on:
   push:
-    branches:
-      - dev
+    branches: [ dev ]
 
 jobs:
-  build:
+  depoly:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: enriikke/gatsby-gh-pages-action@v2
+      - uses: actions/checkout@v2
+      - uses: enriikke/gatsby-gh-pages-action@v2.1.1
         with:
           access-token: ${{ secrets.DBC }}
           deploy-branch: gh-pages
