--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
+    "gatsby-plugin-nprogress": "^2.6.0",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sass": "^2.6.0",
@@ -16,6 +17,7 @@
     "gatsby-transformer-sharp": "^2.6.0",
     "gsap": "^3.5.1",
     "headroom.js": "^0.12.0",
+    "locomotive-scroll": "^4.0.4",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
@@ -24,9 +26,11 @@
     "react-headroom": "^3.0.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.1",
+    "uuid": "^3.4.0",
     "vanilla-tilt": "^1.7.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "prettier": "2.1.2"
   },
   "keywords": [
