--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,14 +2,13 @@ name: Gatsby Publish
 
 on:
   push:
-    branches:
-      - dev
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: enriikke/gatsby-gh-pages-action@v2
         with:
           access-token: ${{ secrets.DBC }}
