--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "scripts": {
         "predeploy": "npm run build",
         "deploy": "gh-pages -d public",
-        "build": "gatsby build",
+        "build": "gatsby build --prefix-paths",
         "develop": "gatsby develop",
         "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
         "start": "npm run develop",
